[package]
name = "web-add-one"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
quanta = { path = "../..", default-features = false, features = ["webgpu"] }
quanta-ir = { path = "../../crates/quanta-ir", features = ["jit"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
