[package]
name = "quanta-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared GPU substrate of Quanta — device trait, drivers, fields, textures, sync"
keywords = ["gpu", "compute", "shader", "metal", "vulkan"]
categories = ["graphics", "hardware-support"]

[features]
# Mirrors the facade's feature axes. The `quanta` facade and
# `quanta-render` both depend on this crate with
# `default-features = false` and forward explicitly; the defaults here
# only serve a bare `cargo build -p quanta-core`.
default = ["metal", "render", "compute"]
std = []
metal = ["std"]
## Vulkan face. The FEATURE is target-independent (it may be on by
## default), but the CODE is `cfg(target_os)`-gated to Linux / Android /
## Windows — the Vulkan module, its discovery arm, and the
## `#[link(name = "vulkan")]` stanza only compile there. On Apple targets
## the face is pruned so a plain build needs no libvulkan (the MoltenVK
## link trap). `vulkan-portability` extends the code to macOS for
## MoltenVK users; see below.
vulkan = ["std"]
## Opt-in: compile the Vulkan face on macOS too (against MoltenVK's
## `libvulkan`). Requires `vulkan`. Purely additive — it only widens the
## `cfg(target_os)` set the Vulkan code is gated on to include macOS;
## link-time then needs a MoltenVK `libvulkan` on the loader path.
vulkan-portability = ["vulkan"]
## Render half of the device trait + drivers, plus the render data
## model they speak (PipelineDesc / RenderPass / RenderOp / shader
## binaries / surface configuration). `quanta-render` builds on this.
render = []
## Compute half of the device trait + drivers, plus the compute data
## model (Wave / Batch / Queue / compute ICB).
compute = []
## CPU software driver: execute KernelDef IR without GPU hardware.
## Implies `compute` — the driver's whole job is executing kernels.
software = ["std", "jit", "compute"]
## Enable JIT compilation: runtime shader emission from embedded
## KernelDef IR.
jit = ["quanta-ir/jit", "quanta-ir/op-matrix-cases"]
## WebGPU driver, browser-only (target_arch = "wasm32"). See the
## facade's feature docs for the no-wrapper-crate policy.
webgpu = ["std", "jit", "compute"]

[dependencies]
quanta-ir.workspace = true

[dev-dependencies]
proptest = "1"
