[package]
name = "quanta-autograd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reverse-mode automatic differentiation for Quanta — tape-based VJP over Array<T> (the tier-2 differentiation primitive ML consumers build on). VJP rules proven analytic in specs/verify/lean/Quanta/Autograd."
keywords = ["gpu", "autograd", "autodiff", "gradient", "backprop"]
categories = ["mathematics", "science"]

[lib]
name = "quanta_autograd"
path = "src/lib.rs"

[features]
# Backend forwarded to quanta-array (which forwards to quanta/-prims/-blas).
# `software` is the CPU-JIT lane used for differential gradient-check tests.
default = ["software"]
software = ["quanta-array/software", "quanta-core/software", "quanta/software"]
metal = ["quanta-array/metal", "quanta-core/metal", "quanta/metal"]
vulkan = ["quanta-array/vulkan", "quanta-core/vulkan", "quanta/vulkan"]

[dependencies]
# quanta-autograd names only `quanta::Gpu` / `quanta::QuantaError`
# (runtime), both in `quanta-core`. `compute` is on so the `Gpu`
# compute surface the array ops go through is present. No DSL macros.
quanta-core = { path = "../../gpu/quanta-core", version = "0.1.0-alpha.4", default-features = false, features = [
    "compute",
] }
quanta-array = { path = "../../sci/quanta-array", version = "0.1.0-alpha.4", default-features = false }
quanta-blas = { path = "../../sci/quanta-blas", version = "0.1.0-alpha.4", default-features = false }

[dev-dependencies]
# Facade dev-dep: tests/doctests call `quanta::init()` / `init_cpu()`.
# Backend features are forwarded from this crate's own features above so
# `--features metal` gives the tests a real Metal device.
quanta = { path = "../../..", version = "0.1.0-alpha.4", default-features = false }
