[package]
name = "quanta-nn-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macro for quanta-nn parameter trees — #[derive(ParamTree)] generates the typed-tree plumbing (Vars twin, bind/flatten/unflatten/grads)."
keywords = ["gpu", "neural-network", "derive", "macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
