[package]
name = "quanta-nn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Neural network stack for Quanta — layers, fused kernels (attention, norms), optimizers, and training over quanta-autograd. The ML face of the quanta:: namespace; completeness contract in PARITY.md."
keywords = ["gpu", "neural-network", "deep-learning", "transformer", "machine-learning"]
categories = ["science", "mathematics"]

[lib]
name = "quanta_nn"
path = "src/lib.rs"

[features]
# Backend forwarded down the substrate (array/autograd use software|metal|vulkan,
# rand uses gpu|gpu-metal|gpu-vulkan — same split the facade handles).
default = ["software"]
software = [
    "quanta-autograd/software",
    "quanta-array/software",
    "quanta-core/software",
    "quanta-rand/gpu",
    "quanta/software",
]
metal = [
    "quanta-autograd/metal",
    "quanta-array/metal",
    "quanta-core/metal",
    "quanta-rand/gpu-metal",
    "quanta/metal",
]
vulkan = [
    "quanta-autograd/vulkan",
    "quanta-array/vulkan",
    "quanta-core/vulkan",
    "quanta-rand/gpu-vulkan",
    "quanta/vulkan",
]

[dependencies]
quanta-core = { path = "../../gpu/quanta-core", version = "0.1.0-alpha.3", default-features = false, features = [
    "compute",
] }
quanta-array = { path = "../../sci/quanta-array", version = "0.1.0-alpha.3", default-features = false }
quanta-autograd = { path = "../quanta-autograd", version = "0.1.0-alpha.3", default-features = false }
quanta-blas = { path = "../../sci/quanta-blas", version = "0.1.0-alpha.3", default-features = false }
quanta-rand = { path = "../../sci/quanta-rand", version = "0.1.0-alpha.3", default-features = false }

[dev-dependencies]
quanta = { path = "../../..", version = "0.1.0-alpha.3", default-features = false }
