[package]
name = "quanta-nn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Neural network stack for Quanta — layers, fused kernels (attention, norms), optimizers, and training over quanta-autograd. The ML face of the quanta:: namespace; completeness contract in PARITY.md."
keywords = ["gpu", "neural-network", "deep-learning", "transformer", "machine-learning"]
categories = ["science", "mathematics"]

[lib]
name = "quanta_nn"
path = "src/lib.rs"

[features]
# Backend forwarded down the substrate (array/autograd use software|metal|vulkan,
# rand uses gpu|gpu-metal|gpu-vulkan — same split the facade handles).
default = ["software"]
software = [
    "quanta-autograd/software",
    "quanta-array/software",
    "quanta-core/software",
    "quanta-rand/gpu",
    "quanta/software",
]
metal = [
    "quanta-autograd/metal",
    "quanta-array/metal",
    "quanta-core/metal",
    "quanta-rand/gpu-metal",
    "quanta/metal",
]
vulkan = [
    "quanta-autograd/vulkan",
    "quanta-array/vulkan",
    "quanta-core/vulkan",
    "quanta-rand/gpu-vulkan",
    "quanta/vulkan",
]

[dependencies]
quanta-nn-derive = { path = "../quanta-nn-derive", version = "0.1.0-alpha.5" }
quanta-core = { path = "../../gpu/quanta-core", version = "0.1.0-alpha.5", default-features = false, features = [
    "compute",
] }
# Fused kernels (attention, norms) are `#[quanta::kernel]` bodies. Like
# quanta-prims / quanta-blas, the library depends on `quanta-compute-dsl`
# for the macros (invoked with `crate = quanta_core`, never the facade) so
# the facade can re-export this crate without a dependency cycle. Every
# backend feature this crate exposes already implies GPU capability, so the
# DSL is a plain (non-optional) dependency rather than gated behind a `gpu`
# flag the way the pure-Rust-reference-capable prims/blas crates gate it.
quanta-compute-dsl = { path = "../../lang/quanta-compute-dsl", version = "0.1.0-alpha.5" }
quanta-array = { path = "../../sci/quanta-array", version = "0.1.0-alpha.5", default-features = false }
quanta-autograd = { path = "../quanta-autograd", version = "0.1.0-alpha.5", default-features = false }
quanta-blas = { path = "../../sci/quanta-blas", version = "0.1.0-alpha.5", default-features = false }
quanta-rand = { path = "../../sci/quanta-rand", version = "0.1.0-alpha.5", default-features = false }

[dev-dependencies]
# Facade dev-dep: tests call `quanta::init()` / `init_cpu()`. Backend
# features forward from this crate's own features so `--features metal`
# gives the differential tests a real Metal device.
quanta = { path = "../../..", version = "0.1.0-alpha.5", default-features = false }
