[package]
name = "quanta-array"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NumPy-equivalent N-dimensional GPU array for Quanta — Array<T> over Field + layout algebra, broadcasting ufuncs, reductions. Compute-only (depends on quanta with render off)."
keywords = ["gpu", "ndarray", "numpy", "compute", "tensor"]
categories = ["mathematics", "science"]

[lib]
name = "quanta_array"
path = "src/lib.rs"

[features]
# Backend selection forwarded to quanta (render off — quanta-array is a
# pure-compute consumer, the headless shape from step 085), to quanta-prims
# (reductions), and to quanta-blas (linalg). `*/gpu` alone uses the software
# JIT backend; gpu-metal/gpu-vulkan select hardware.
default = ["software"]
software = ["quanta-core/software", "quanta/software", "quanta-prims/gpu", "quanta-blas/gpu"]
metal = ["quanta-core/metal", "quanta/metal", "quanta-prims/gpu-metal", "quanta-blas/gpu-metal"]
vulkan = ["quanta-core/vulkan", "quanta/vulkan", "quanta-prims/gpu-vulkan", "quanta-blas/gpu-vulkan"]

[dependencies]
# quanta-array uses the compute-face `GpuType` trait plus runtime types
# (`Gpu` / `Field` / `QuantaError`), all in `quanta-core` behind
# `compute`. No DSL macros, so no `quanta-compute-dsl` dep. `compute` is
# on unconditionally because `GpuType` is named regardless of backend.
quanta-core = { path = "../../gpu/quanta-core", version = "0.1.0-alpha.2", default-features = false, features = [
    "compute",
] }
quanta-tensor.workspace = true
quanta-ir.workspace = true
quanta-prims = { path = "../../sci/quanta-prims", version = "0.1.0-alpha.2", default-features = false }
quanta-blas = { path = "../../sci/quanta-blas", version = "0.1.0-alpha.2", default-features = false }

[dev-dependencies]
quanta = { path = "../../..", version = "0.1.0-alpha.2", default-features = false, features = [
    "software",
] }
# Host-side RNG for the Monte-Carlo pricing test (no GPU features needed).
quanta-rand = { path = "../../sci/quanta-rand", version = "0.1.0-alpha.2", default-features = false }
